# versaloon-git

./: .gitignore  COPYING  Makefile.am  README.md  TODO  configure.in  guess-rev.sh
codelite/: codelite.workspace  codelite_wsp.mk
codelite/versaloon/: Gdb_Server.cfg  Program_flash.cfg  versaloon.project
codelite/vsprog/: config.h  vsprog.mk  vsprog.project
doc/: Commands.md  Connecting.md  Makefile.am  Uploading-fw.md  VSF_USB_Device_Stack.tex  VersloonPlatform_WhiteBook.tex  vsprog.texi
dongle/driver/linux/: 60-versaloon.rules
dongle/driver/win32/: VCOM.inf  Versaloon_Pro_VCOM.inf  stmcdc.inf  stmcdc_with_MSC.inf
dongle/firmware/: Makefile  USB_proto.h  app_err.h  app_io.c  app_io.h  app_log.h  app_type.h  changelog  license  main.c  readme  usb_protocol.c  usb_protocol.h  usb_protocol_CDC.c  usb_protocol_CDCACM.c  usb_protocol_MSC.c  usb_protocol_Versaloon.c  usb_protocol_VersaloonSuper.c  usb_protocol_stlink.c
dongle/firmware/HW/: HW.c  HW.h  stm32f10x_conf.h  stm32f10x_it.c  stm32f10x_it.h
dongle/firmware/Interfaces/: app_interfaces.c  app_interfaces.h  app_interfaces_const.h  interfaces.c  interfaces.h  interfaces_const.h
dongle/firmware/Projects/: STM32_SEC_FLASH.ld  Versaloon.icf  VersaloonPro.icf  board_defs.mk  hw_cfg_BluePill.h  hw_cfg_MiniRC2.h  hw_cfg_MiniRC3.h  hw_cfg_MiniRC4.h  hw_cfg_MiniRelease1.h  hw_cfg_NanoRelease1.h  hw_cfg_ProRC1.h  hw_cfg_ProRelease1.h  hw_cfg_ProRelease3.h  hw_cfg_STBee_Mini.h  hw_cfg_VSFCore.h  hw_cfg_st_link.h  (+8 more)
dongle/hardware/: license
release/firmware/: Versaloon.hex  Versaloon_GCC-STM32F4_Discovery-0x0000.hex  readme.txt
src/: Makefile.am  app_cfg.h  app_err.h  app_io.h  app_log.h  app_type.h  compiler.h  file_parser.c  file_parser.h  prog_interface.h  vsprog.c  vsprog.h
src/config/: 24cxx.xml  93cx6.xml  at89s5x.xml  at91sam3.xml  avr32.xml  avr8.xml  avrxmega.xml  c8051f.xml  cfi.xml  df25xx.xml  ee24cxx.xml  ee93cx6.xml  hcs08.xml  hcs12.xml  lm3s.xml  lpc1000.xml  lpc900.xml  msp430.xml  nand.xml  nuc100.xml  psoc.xml  psoc1.xml  s12x.xml  sd.xml  sst32hfxx.xml  stm32.xml  stm32f1.xml  stm32f2.xml  stm32f4.xml  stm8.xml
src/dal/: Makefile.am  dal.c  dal.h  dal_cfg.h  dal_internal.h
src/dal/df25xx/: df25xx_drv.c  df25xx_drv.h  df25xx_drv_cfg.h
src/dal/df45xx/: df45xx_drv.c
src/dal/ee24cxx/: ee24cxx_drv.c  ee24cxx_drv.h
src/dal/ee93cx6/: ee93cx6_drv.c  ee93cx6_drv.h
src/dal/mal/: mal.c  mal.h  mal_internal.h
src/dal/mic2826/: mic2826.c  mic2826.h  mic2826.vts  mic2826_cfg.h  mic2826_drv.c  mic2826_drv_cfg.h  mic2826_script.c
src/dal/sd/: sd_common.c  sd_spi_drv.c
src/dal/sd_spi/: sd_spi_drv.c  sd_spi_drv.h  sd_spi_drv_cfg.h
src/driver/: Makefile.am  port.c  port.h
src/driver/comport/: comport.c  comport.h
src/driver/timer/: timer.c  timer.h
src/driver/usb/: usbapi.c  usbapi.h  usbapi_scripts.c
src/programmer/: Makefile.am  programmer.c  programmer.h
src/programmer/interfaces/: interfaces.c  interfaces.h  interfaces_const.h
src/programmer/interfaces/versaloon/: versaloon.c  versaloon_include.h  versaloon_internal.h  versaloon_libusb.c
src/programmer/interfaces/versaloon/usbtoxxx/: usbtoadc.c  usbtobdm.c  usbtoc2.c  usbtodusi.c  usbtoebi.c  usbtogpio.c  usbtoi2c.c  usbtoissp.c  usbtojtaghl.c  usbtojtagll.c  usbtojtagraw.c  usbtolpcicp.c  usbtomicrowire.c  usbtomsp430jtag.c  usbtomsp430sbw.c  usbtopwm.c  usbtopwr.c  usbtospi.c  usbtoswd.c  usbtoswim.c  usbtousart.c  usbtoxxx.c  usbtoxxx.h  usbtoxxx_internal.h
src/programmer/interfaces/virtualinterface/vi_stm32/: vi_stm32.c
src/programmer/versaloon/: versaloon.c  versaloon.h  versaloon_include.h  versaloon_internal.h
src/programmer/versaloon/usbtoxxx/: usbtoadc.c  usbtobdm.c  usbtoc2.c  usbtodusi.c  usbtogpio.c  usbtoi2c.c  usbtoissp.c  usbtojtaghl.c  usbtojtagll.c  usbtojtagraw.c  usbtolpcicp.c  usbtomsp430jtag.c  usbtomsp430sbw.c  usbtopwm.c  usbtopwr.c  usbtospi.c  usbtoswd.c  usbtoswim.c  usbtoswj.c  usbtousart.c  usbtoxxx.c  usbtoxxx.h  usbtoxxx_internal.h
src/programmer/versaloon/vsllink/: vsllink.c  vsllink.h  vsllink_internal.h
src/scripts/: Makefile.am  app_scripts.c  app_scripts.h  interfaces_script.c  interfaces_script.h  scripts.c  scripts.h
src/scripts/mic2826_script/: mic2826_script.c
src/tools/: Makefile.am
src/tools/bufffunc/: bufffunc.c  bufffunc.h
src/tools/filelist/: filelist.c  filelist.h
src/tools/fileparser/: fileparser.c  fileparser.h
src/tools/hex/: hex.c  hex.h
src/tools/list/: list.h
src/tools/memlist/: memlist.c  memlist.h
src/tools/pgbar/: pgbar.c  pgbar.h
src/tools/s19/: s19.c  s19.h
src/tools/strparser/: strparser.c  strparser.h
src/vsf/: Makefile.am
src/vsf/dal/: dal.c  dal.h  dal_cfg.h  dal_internal.h
src/vsf/dal/df25xx/: df25xx_drv.c  df25xx_drv.h  df25xx_drv_cfg.h
src/vsf/dal/df45xx/: df45xx_drv.c  df45xx_drv.h
src/vsf/dal/ee24cxx/: ee24cxx_drv.c  ee24cxx_drv.h  ee24cxx_drv_cfg.h
src/vsf/dal/ee93cx6/: ee93cx6_drv.c  ee93cx6_drv.h  ee93cx6_drv_cfg.h
src/vsf/dal/mal/: mal.c  mal.h  mal_internal.h
src/vsf/dal/mic2826/: mic2826_drv.c  mic2826_drv.h  mic2826_script.c
src/vsf/dal/nrf24l01/: nrf24l01_drv.c  nrf24l01_drv.h
src/vsf/dal/sd/: sd_common.c  sd_common.h  sd_spi_drv.c  sd_spi_drv.h  sd_spi_drv_cfg.h
src/vsf/stack/usb_device/: vsf_usbd.h  vsf_usbd_cfg.h  vsf_usbd_const.h  vsf_usbd_drv.h
src/vsf/tool/buffer/: buffer.h
src/vsf_cfg/: dal_cfg.h  interfaces_cfg.h  vsf_usbd_cfg.h
vsf/: Makefile.am  app_type.h  vsf_err.h
vsf/dal/: dal.c  dal.h  dal_cfg.h
vsf/hardware/: todo.txt
vsf/interfaces/: interfaces.c  interfaces.h  interfaces_cfg.h  interfaces_const.h
vsgui/: checkeditor.lfm  checkeditor.pas  cli_caller.pas  com_setup.lfm  com_setup.pas  fileselector.lfm  fileselector.pas  findreplace.lfm  findreplace.pas  fpc-res.res  hexeditor.lfm  hexeditor.pas  inputdialog.lfm  inputdialog.pas  main.lfm  main.pas  parameditor.lfm  parameditor.pas  strparser.pas  synaser.pas  texteditor.lfm  texteditor.pas  vsgui.lpi  vsgui.lpr  vsgui.lrs  vsgui.rc  vsgui.res  vsprogparser.pas  vsprogprogrammer.lfm  vsprogprogrammer.pas  vsprogtarget.pas
(+729 files in other folders)
